--- a/entspannungscoaching.html
+++ b/entspannungscoaching.html
@@ -446,7 +446,7 @@
                             </div>
 
                         </figure>
-                        <h2 class="h4 mt-5">Ziele des Entspannungscoaching</h2>
+                        <h2 class="h4 mt-5" id="ziele">Ziele des Entspannungscoaching</h2>
                         <p>Die Kinder und Jugendliche erlernen hier alltagstaugliche Übungen, die es ihnen ermöglichen, mit Lernproblemen und Stress und somit mit den Herausforderungen des Lebens besser umgehen zu können.</p>
                         <!-- Heading -->
 
