--- a/kundenstimmen.html
+++ b/kundenstimmen.html
@@ -632,7 +632,7 @@
                             <div class="card-body">
                                 <p class="text-white">
                                     Durch das Coaching haben sich nicht nur meine schulischen Leistungen verändert,
-                                    sondern auch in meinem Sport bin ich durch dieTipps erfolgreicher geworden.
+                                    sondern auch in meinem Sport bin ich durch die Tipps erfolgreicher geworden.
                                 </p>
                             </div>
                         </div>
@@ -648,7 +648,7 @@
                              data-parent="#accordion-1">
                             <div class="card-body">
                                 <p class="text-white">
-                                    Ich habe gelernt, dass man sich Sachen gut merken kann, in dem für diese Wörter
+                                    Ich habe gelernt, dass man sich Sachen gut merken kann, in dem man für diese Wörter
                                     Schlüsselwörter findet.
                                 </p>
                             </div>
@@ -694,7 +694,7 @@
                              data-parent="#accordion-1">
                             <div class="card-body">
                                 <p class="text-white">
-                                    Ich habe jetzt manchmal ein besseres Gefühl beim lernen! Mir mach das Lernen jetzt
+                                    Ich habe jetzt manchmal ein besseres Gefühl beim lernen! Mir macht das Lernen jetzt
                                     manchmal auch Spaß
                                 </p>
                             </div>
@@ -765,7 +765,7 @@
                              data-parent="#accordion-2">
                             <div class="card-body">
                                 <p class="text-white">
-                                    Durch deinen Kurs habe ich mehr Selbstvertrauen und Freue am lernen. Mir hat der
+                                    Durch deinen Kurs habe ich mehr Selbstvertrauen und Freude am Lernen. Mir hat der
                                     Kurs gefallen und Spaß gemacht. Vielen Dank!
                                 </p>
                             </div>
@@ -797,7 +797,7 @@
                              data-parent="#accordion-2">
                             <div class="card-body">
                                 <p class="text-white">
-                                    Dannke! Es tut gut zu hören, dass ziemlich vieles am (Lern)Verhalten von meinem Kind
+                                    Danke! Es tut gut zu hören, dass ziemlich vieles am (Lern)Verhalten von meinem Kind
                                     NORMAL ist. Danke für viele Beispiele aus Ihrem eigenen Leben ! Es motiviert sehr.
                                 </p>
                             </div>
@@ -831,7 +831,7 @@
                              data-parent="#accordion-2">
                             <div class="card-body">
                                 <p class="text-white">
-                                    Unseren Kindern hat es sehr gut gefallen. Sie sind immer mir Freude und Spannung zu
+                                    Unseren Kindern hat es sehr gut gefallen. Sie sind immer mit Freude und Spannung zu
                                     ihnen gekommen. Das Lernen lernen hat ihnen Spaß gemacht. Vielen Dank!!
                                 </p>
                             </div>
@@ -848,7 +848,7 @@
                             <div class="card-body">
                                 <p class="text-white">
                                     Vielen Dank für die wunderschöne Zeit. Ich habe sehr viel dazugelernt und natürlich
-                                    hatte ich auch viel Spaß. Hoffentlich machst du weiterhin" Lernen lernen",da es sehr
+                                    hatte ich auch viel Spaß. Hoffentlich machst du weiterhin "Lernen lernen", da es sehr
                                     viel weiterhilft.
                                 </p>
                             </div>
