--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -464,7 +464,7 @@
                             Falls Sie Interesse oder Fragen dazu haben, dann rufen Sie mich gerne an. Zusammen finden wir das passende Angebot für Sie.
                         </p>
                         <p>
-                            Durch meine privaten und beruflichen Erfahrungen sind mir Lernprobleme und der damit verbundende Leidensdruck nicht fremd. In einer ruhigen und vertrauensvollen Umgebung möchte ich die Kinder und Jugendlichen individuell und ganzheitlich unterstützen, um gemeinsam herauszufinden, was in ihnen steckt und um die Lust am erfolgreichen Lernen zu entdecken.
+                            Durch meine privat und beruflichen Erfahrungen sind mir Lernprobleme und der damit verbundende Leidensdruck nicht fremd. In einer ruhigen und vertrauensvollen Umgebung möchte ich die Kinder und Jugendlichen individuell und ganzheitlich unterstützen. Gemeinsam finden wir heraus, was in ihnen steckt und entdecken die Lust am erfolgreichen Lernen.
                         </p>
                         <h3 class="h5 mt-4">Was mir noch wichtig ist:</h3>
                         <p>
